--- a/style.css
+++ b/style.css
@@ -18,3 +18,93 @@ section {
 #gallery .row > * {
   padding: 0;
 }
+
+/* Style Extra */
+.extra-velg {
+  position: relative;
+  border-radius: 10px;
+  height: 500px;
+  transform-style: preserve-3d;
+}
+
+.extra-velg::before {
+  content: "MY";
+  position: absolute;
+  color: white;
+  font-size: 6em;
+  font-weight: bold;
+  font-style: italic;
+  top: 30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.extra-velg:hover::before {
+  opacity: 0.5;
+}
+
+.extra-velg::after {
+  content: "VELG";
+  position: absolute;
+  color: white;
+  font-size: 4.3em;
+  font-weight: bold;
+  font-style: italic;
+  top: 350px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.extra-velg:hover::after {
+  opacity: 0.5;
+}
+
+.nama-velg {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  color: brown;
+  text-align: center;
+  font-size: 2em;
+  opacity: 0;
+  transition: 0.5s;
+  transform: translate3d(0, 0, 50px);
+}
+
+.extra-velg:hover .nama-velg {
+  top: 25px;
+  opacity: 1;
+}
+
+.button-velg {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate3d(-50%, 0, 100px);
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.extra-velg:hover .button-velg {
+  opacity: 1;
+  bottom: 25px;
+}
+
+.gambar-velg {
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate3d(-50%, -52%, 80px);
+  width: 200px;
+  height: 200px;
+  transition: 0.5s;
+}
+
+.extra-velg:hover .gambar-velg {
+  top: 53%;
+  transform: translate3d(-50%, -53%, 80px) scale(1.1);
+}
